[project]
name = "pygments-jml-key"
version = "0.1.0"

authors = [
  { name="Alexander Weigl", email="weigl@kit.edu" },
]

description = "Pygments lexer for the Java Modeling Language and KeY Theorem Prover files"
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "Pygments",
    'antlr4-python3-runtime',
]

[project.urls]
"Homepage" = "https://github.com/wadoon/pygments-jml-key"
"Bug Tracker" = "https://github.com/wadoon/pygments-jml-key/issues"



[build-system]
requires = ["setuptools >= 51.0.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."pygments.lexers"]
key = "keylex:KeYLexer"
jml = "keylex:JMLLexer"
